--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,9 +39,10 @@ jobs:
           # Distribution group
           group: test
           # Artefact to upload (.apk or .ipa)
-          file: ${{github.workspace}}/Source/pim/**/pimApp-release.apk
+          file: Source/pim/**/pimApp-release.apk
           # Release notes visible on release page
           releaseNotes: R-1
           # If true, send an email notification to the distribution group
           notifyTesters: true
-      
+          
+     
