--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,7 +39,7 @@ jobs:
           # Distribution group
           group: test
           # Artefact to upload (.apk or .ipa)
-          file: Source/pim/**/pimApp-release.apk
+          file: /Source/pim/**/pimApp-release.apk
           # Release notes visible on release page
           releaseNotes: R-1
           # If true, send an email notification to the distribution group
